﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.12...]
### 2018-01-28
	Fixed: Background mode was not applying even foreground affinity if no background affinity was defined.
	Added: Network input, output, and queue to the UI. Not terribly useful, but it's there.
	Fixed: Net sample timer was not started since the timer update.
	Changed: Network device list reduced in height.
	Fixed: ArgumentOutOfRangeException for string.Substring() in …\ProcessManager.cs:line 1465
### 2018-01-27
	Removed: Adjust latency. It served no purpose than noise.
	Changed: Status bar no longer shows as much useless information.
	Changed: Swapped from Threading.Timer to Timers.Timer because Threading.Timer is prone to obscure delays outside of my control or influence.
	Changed: Reduced use of Task.Run as it seems to load threadpool as well.
	Changed: Watchlist editor has better validation. Ignore list is treated better for malconfiguration.
	Changed: Corrected stated memory unit in UI.
	Fixed: GPU temperature was misplaced.
### 2018-01-26
	Added: Experimental affinity ideal option. Usage via `Affinity ideal=#` in Watchlist.ini with value as zero-indexed number for ideal core.
		Assigned core must be one of the cores allowed by affinity mask.
	Fixed: Auto-adjust was broken in odd ways.
	Changed: Default thread queue barriers increase from 2 and 5 to 5 and 18. Still experimenting on good defaults.
### 2018-01-25
	Added: Thread queue barriers to power auto-adjust.
	Added: Warning about power mode being changed externally when auto-adjust is enabled.
	Fixed: Recently modified being weird.
	Internal: Path visibility changes to shown path is cached in some instances, in case it is used in multiple parts.
	FIXED: A MAJOR BUG IN POWER AUTO-ADJUST. This potentially caused crippling of the computer due to power saver mode getting stuck. Was fun.