@@ -129,6 +129,7 @@
     <Compile Include="AudioManager.cs" />
     <Compile Include="Cause.cs" />
     <Compile Include="ConfigManager.cs" />
+    <Compile Include="Enums\ForegroundMode.cs" />
     <Compile Include="Events\InternetStatus.cs" />
     <Compile Include="Events\NetworkStatus.cs" />
     <Compile Include="Events\AutoAdjustReaction.cs" />
