@@ -3,6 +3,10 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.12...]
+### 2018-01-29
+	Changed: Foreground only and background powerdown are now the same combobox in the rule editor.
+	Internal: Foreground only and background powerdown are now single Foreground mode setting, reflected in the Watchlist.ini as integer with values from -1 to 2.
+		-1 = Ignore [Default], 0 = Standard, 1 = Full, 2 = Power only
 ### 2018-01-28
 	Fixed: Background mode was not applying even foreground affinity if no background affinity was defined.
 	Added: Network input, output, and queue to the UI. Not terribly useful, but it's there.
